--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,7 +7,7 @@
  		<servlet-class>com.sun.jersey.spi.container.servlet.ServletContainer</servlet-class>
  		<init-param>
  			<param-name>com.sun.jersey.config.property.packages</param-name>
- 			<param-value>com.book_store</param-value>
+ 			<param-value>com</param-value>
  		</init-param>
  	</servlet>
  	
